--- a/26_setup/docker-compose.yml
+++ b/26_setup/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.5.0
-    container_name: elasticsearch
+    container_name: elastic
     environment:
       - node.name=es01
       - cluster.name=docker-cluster
@@ -30,10 +30,10 @@ services:
       - 9300:9300
   kibana:
     image: docker.elastic.co/kibana/kibana-oss:6.5.0
-    container_name: kibana
+    container_name: kibana_1
     environment:
       SERVER_NAME: localhost
-      ELASTICSEARCH_URL: http://elasticsearch:9200/
+      ELASTICSEARCH_URL: http://elastic:9200/
     ports:
       - 5601:5601
     ulimits:
